--- a/config.yml
+++ b/config.yml
@@ -127,13 +127,13 @@ markup:
   goldmark:
     renderer:
       unsafe: true
-#     highlight:
-#         # anchorLineNos: true
-#         codeFences: true
-#         guessSyntax: true
-#         lineNos: true
-#         # noClasses: false
-#         style: monokai
+    highlight:
+      # anchorLineNos: true
+      codeFences: true
+      guessSyntax: true
+      lineNos: true
+      # noClasses: false
+      style: lovelace
 
 privacy:
   vimeo:
