--- a/config.yml
+++ b/config.yml
@@ -56,6 +56,7 @@ params:
   ShowBreadCrumbs: true
   ShowCodeCopyButtons: true
   ShowToc: true
+  
   images: ["papermod-cover.png"]
   comments: true
 
@@ -124,16 +125,19 @@ taxonomies:
   series: series
 
 markup:
-  goldmark:
-    renderer:
-      unsafe: true
-    highlight:
-      # anchorLineNos: true
-      codeFences: true
-      guessSyntax: true
-      lineNos: true
+  highlight:
+    # style: base16/solarized-dark
+    style: vim
+  # goldmark:
+  #   renderer:
+  #     unsafe: true
+  #   highlight:
+  #     # anchorLineNos: true
+  #     codeFences: true
+  #     guessSyntax: true
+  #     lineNos: true
       # noClasses: false
-      style: lovelace
+      # style: base16/railscasts
 
 privacy:
   vimeo:
